@@ -67,11 +67,11 @@ Load Coq file
 Load Coq object file
 .IR f .vo.
 .TP
-.BI \-require\  f
-Load Coq object file
-.IR f .vo
-and import it (Require
-.IR f .).
+.BI \-require\  path
+Load Coq library
+.IR path
+and import it (Require Import
+.IR path .).
 .TP
 .BI \-compile\  f
 Compile Coq file
