@@ -78,10 +78,10 @@ load Coq object file
 .I filename.vo
 
 .TP
-.BI \-require \ filename
-load Coq object file
-.I filename.vo
-and import it (Require Import filename.)
+.BI \-require \ path
+load Coq library
+.I path
+and import it (Require Import path.)
 
 .TP
 .BI \-compile \ filename.v
